<resources>
    <string name="app_name">Self Car</string>
    <string name="name_of_the_application">SelfCar</string>
    <string name="designed_by">Designed by Bruno, Demetrius, Dorenalto e Marcelo</string>
    <string name="google_maps_key">MAPS_API_KEY</string>

    <string name="menu_home_home">Home</string>
    <string name="menu_home_map">Map</string>

    <string name="home_select_options">Select vehicle</string>

    <string name="label_username">NAME</string>
    <string name="label_phone">PHONE</string>
    <string name="label_email">E-MAIL</string>
    <string name="label_password">PASSWORD</string>
    <string name="label_accept_terms">I agree to terms</string>
    <string name="label_terms">Use terms</string>

    <string name="label_create_account">Create account</string>
    <string name="label_reset_password">Forgot  passaword</string>

    <string name="logo_app_content_desc">Logo app</string>
    <string name="button_login">Connect</string>
    <string name="button_create_account">Create account</string>
    <string name="button_i_have_account">I Already have an account</string>

    <string name="login_subtitle">Sign in to continue</string>

    <string name="signup_subtitle">Fill in your account details</string>
    <string name="login_Loading">Authenticating</string>

    <string name="loading_message_processing">Loading</string>

    <string name="work">Trabalho de Conclusão Android</string>
    <string name="information_app">App information</string>
    <string name="information_app_tv">Created by: </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="update">Update!</string>
    <string name="update_application">Update app</string>
    <string name="update_later">Update later</string>
    <string name="update_message">You are using a very old version of the app. You need to update to continue using</string>
    <string name="menu_home_exit">Exit</string>

    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">Notification Channel</string>
    <string name="default_notification_channel_description">App Notification Channel</string>

    <string name="name_of_item">Item Name</string>
    <string name="location">Adress</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="registerItem">Register</string>
    <string name="updateItem">Update</string>
    <string name="choose_your_item">Registered locations</string>
    <string name="register_your_item">Register your location</string>
    <string name="update_your_item">Update your location</string>
    <string name="integrate_your_item">Call or share</string>
    <string name="zip_code">CEP</string>

    <string name="button_create_location">Add Location</string>
    <string name="version">Version 1.0</string>
    <string name="Hello">Hello, mr(s)</string>

    <string name="call">Call</string>
    <string name="share">Share</string>

    <string name="loading_message">Please wait</string>
    <string name="give_call_permission">Allow de app to make calls</string>
    <string name="item_saving">Saving...</string>

    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="dialog_delete">Delete</string>
    <string name="dialog_delete_message">Delete item from list?</string>

    <string name="dialog_call">Call</string>
    <string name="dialog_call_message">Call the number </string>
</resources>