<?xml version ="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerUpdateApp"
    android:layout_width ="match_parent"
    android:layout_height ="match_parent"
    android:background ="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation ="vertical"
    android:padding="32dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivUpdateApp"
        android:layout_width ="192dp"
        android:layout_height ="192dp"
        app:lottie_autoPlay ="true"
        app:lottie_loop ="true"
        app:lottie_rawRes ="@raw/data"/>

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/tvTitleUpdateApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/update"
        android:textColor="#000000" />
    <TextView
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:id="@+id/tvUpdateApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/update_message"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btUpdateApp"
        style="@style/button"
        android:text="@string/update_application" />
    <TextView
        android:id="@+id/btUpdateLater"
        style="@style/link"
        android:text="@string/update_later"
        android:layout_marginTop="32dp" />
</LinearLayout>