<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvSubTitleSignUp"
    android:background="@color/primaryBackground">

    <LinearLayout
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogoApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="48dp"
                android:text="@string/app_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/ivLogoApp"
                app:layout_constraintTop_toTopOf="@+id/ivLogoApp" />

            <TextView
                android:id="@+id/tvSubTitleSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_your_item"
                android:textColor="#9EB0BC"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvAppName"
                app:layout_constraintTop_toBottomOf="@+id/tvAppName" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/name_of_item" />

                <EditText
                    android:id="@+id/etNameItem"
                    style="@style/field_edit_text"
                    tools:text="" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/etPhoneItem"
                    style="@style/field_edit_text"
                    tools:text="(11) 99999-9999" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/zip_code" />

                <EditText
                    android:id="@+id/etZipCode"
                    style="@style/field_edit_text"
                    tools:text="01000-000" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/location" />

                <EditText
                    android:id="@+id/etLocationItem"
                    style="@style/field_edit_text"
                    tools:text="" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/etDescriptionItem"
                    style="@style/field_edit_text"
                    tools:text="" />

            </LinearLayout>

            <Button
                android:id="@+id/btRegister"
                android:text="@string/register"
                style="@style/button"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>