<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.information.InformationActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout"
      android:layout_width="0dp"
      android:layout_height="136dp"
      android:layout_marginTop="0dp"
      android:background="@drawable/shape_header"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/ivBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInformation_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/information_app" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="150dp"
      android:layout_height="110dp"
      android:layout_marginBottom="16dp"
      android:layout_marginTop="32dp"
      app:layout_constraintBottom_toTopOf="@+id/tvInformationAppTitle"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
      app:srcCompat="@drawable/logofiap" />

  <LinearLayout
      android:id="@+id/contributorsContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintTop_toBottomOf="@+id/tvInformationAppTitle"
      android:orientation="vertical">

    <TextView
        android:id="@+id/tvContributors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        style="@style/label_title"
        android:text="@string/information_app_tv" />
    <TextView
        style="@style/label_contributor"
        android:text="Bruno Fonseca de Almeida RM 337107"/>
    <TextView
        style="@style/label_contributor"
        android:text="Demétrius Tavares de Tavares e Paula RM 338132"/>
    <TextView
        style="@style/label_contributor"
        android:text="Dorenalto Mangueira Couto RM 338609"/>
    <TextView
        style="@style/label_contributor"
        android:text="Marcelo Toshio Yamashita RM 337940"/>

  </LinearLayout>

  <TextView
      android:id="@+id/tvInformationAppTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:layout_marginTop="16dp"
      android:text="@string/app_name"
      android:textColor="@color/primaryTextColor"
      android:textSize="36sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/contributorsContainer"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:layout_marginBottom="32dp"
      android:text="@string/version"
      android:textAlignment="center"
      app:layout_constraintBottom_toTopOf="@+id/contributorsContainer"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvInformationAppTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>